--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-2.67MB/s(Youtube:不良林), server: 111.45.22.136, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-361.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇳🇱 荷兰-2.90MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇩🇪 德国-310.8KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-209.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-1001.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-596.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-310.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
